recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: not found: type color
		 	setCouleur(orange:color)
                                          ^